syntax = "proto3";

package acs3;
import "common.proto";
import "aelf_options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option (aelf.identity) = "acs3";

service AuthorizationContract {
    rpc Approve (ApproveInput) returns (google.protobuf.BoolValue) {
    }
    rpc Release (Hash) returns (google.protobuf.Empty) {
    }
}

message ApproveInput {
    Hash proposalHash = 1;
    bytes inputData= 2;
}
